# CollatzConjectureScripts

./: CMakeLists.txt  CMakePresets.json  CollatzConjectureScripts.sln  CollatzConjectureScripts.vcxproj  CollatzConjectureScripts.vcxproj.filters  README.md  ReusableFunctions.cpp  ReusableFunctions.h  main.cpp
CollatzC.125f2e5d/x64/Debug/: CollatzConjectureScripts.exe.recipe  CollatzConjectureScripts.ilk  vc143.idb
CollatzC.125f2e5d/x64/Debug/CollatzC.125f2e5d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CollatzConjectureScripts.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
